--- a/AppShell.xaml
+++ b/AppShell.xaml
@@ -6,15 +6,22 @@
     xmlns:local="clr-namespace:ProyectoMAUI"
     xmlns:vi="clr-namespace:ProyectoMAUI.View"
     Shell.FlyoutBehavior="Flyout"
-    Title="ProyectoMAUI">
+    Title="ProyectoMAUI"
+    BackgroundColor="#f0f0f0"
+    Shell.FlyoutBackdrop="#b6dec7"
+    >
 
     <ShellContent
         Title="Listar"
         ContentTemplate="{DataTemplate vi:ListadoPacienteView}"
-        Route="ListadoAlumnos" />
+        Route="Listado Pacientes" />
     <ShellContent
-        Title="Nuevo alumno"
+        Title="Nuevo Paciente"
         ContentTemplate="{DataTemplate vi:PacienteView}"
-        Route="Alumno" />
+        Route="Paciente" />
+    <ShellContent
+        Title="Detalle de paciente"
+        ContentTemplate="{DataTemplate vi:CalculoPacienteView}"
+        Route="Detalle Paciente"/>
 
 </Shell>
