--- a/View/ListadoPacienteView.xaml
+++ b/View/ListadoPacienteView.xaml
@@ -10,20 +10,17 @@
              BackgroundColor="#AFC8AD">
     <Grid RowDefinitions="100,*,50">
         <HorizontalStackLayout HorizontalOptions="Center">
-            <ImageButton
-                Padding="0,10,0,0"
-                Command="{Binding ListarPacientesCommand}"
-                IsVisible="{Binding IsReady}"
-                Source="list.png" />
-            <ImageButton
-                Padding="0,10,0,0"
-                Command="{Binding AddNewCommand}"
-                Source="addnew.png" />
+            <Button Text="Actualizar Lista"
+                    Command="{Binding ListarPacientesCommand}"
+                    IsVisible="{Binding IsReady}"/>
+
+            <Button Text="Añadir paciente"
+                    Command="{Binding AddNewCommand}"/>
         </HorizontalStackLayout>
         <Frame
             Grid.Row="1"
             Margin="10"
-            Background="{StaticResource Gray100}"
+            Background="#f5f5f5"
             HorizontalOptions="Center">
             <RefreshView Command="{Binding ListarPacientesCommand}" IsRefreshing="{Binding IsRefreshing}">
                 <CollectionView
