--- a/App.xaml
+++ b/App.xaml
@@ -2,6 +2,7 @@
 <Application xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:local="clr-namespace:ProyectoMAUI"
+             xmlns:converters="clr-namespace:ProyectoMAUI.Converters"
              x:Class="ProyectoMAUI.App">
     <Application.Resources>
         <ResourceDictionary>
@@ -9,6 +10,8 @@
                 <ResourceDictionary Source="Resources/Styles/Colors.xaml" />
                 <ResourceDictionary Source="Resources/Styles/Styles.xaml" />
             </ResourceDictionary.MergedDictionaries>
+
+            <converters:StringNotNullOrEmptyConverter x:Key="StringNotNullOrEmpty" />
 
             <!-- Estilo para Entry -->
             <Style TargetType="Entry">
@@ -31,17 +34,25 @@
                 <Setter Property="HorizontalOptions" Value="FillAndExpand"/>
             </Style>
 
-            <!-- Estilo para Button -->
             <Style TargetType="Button">
+                <!-- Dimensiones -->
                 <Setter Property="HeightRequest" Value="40"/>
-                <!-- Más cómodo para toque -->
-                <Setter Property="BackgroundColor" Value="{StaticResource Secondary}"/>
-                <Setter Property="TextColor" Value="{StaticResource PrimaryDarkText}"/>
+                <Setter Property="CornerRadius" Value="12"/>
+                <Setter Property="Padding" Value="16,0"/>
+                <Setter Property="FontSize" Value="14"/>
+
+                <!-- Colores -->
+                <Setter Property="BackgroundColor" Value="{StaticResource Primary}"/>
+                <Setter Property="TextColor" Value="{StaticResource White}"/>
+
+                <!-- Borde -->
                 <Setter Property="BorderColor" Value="{StaticResource Black}"/>
                 <Setter Property="BorderWidth" Value="2"/>
+
+                <!-- Posicionamiento -->
                 <Setter Property="Margin" Value="0,0,10,0"/>
                 <Setter Property="HorizontalOptions" Value="Start"/>
-                <!-- Ajusta según diseño -->
+                <Setter Property="FontAttributes" Value="Bold"/>
             </Style>
 
             <!-- Estilo para NavigationPage -->
